SSR: replace LinkedList with ArrayList